# cebl-sdk

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
cebl/: __init__.py  client.py  config.json  constants.py  court.py  gamestats.py  utils.py
tests/: test_client.py  test_data.py  test_gamestats.py
